--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -62,7 +62,19 @@
   </style>
 
   <script>
+    var inputs = document.querySelectorAll('.controls input');
 
+    function handleUpdate() {
+      var suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+    }
+
+    inputs.forEach((input)=>{
+      input.addEventListener('change', handleUpdate);
+    })
+    inputs.forEach((input)=>{
+      input.addEventListener('mouseover', handleUpdate);
+    })
   </script>
 
 </body>
