--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -124,6 +124,27 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel')
+
+    function toggleOpen(){
+      console.log('hi');
+      this.classList.toggle('open')
+    }
+
+    function toggleActive(e){
+      console.log('end', e.propertyName)
+      if(e.propertyName.includes('flex')){
+        this.classList.toggle('open-active')
+      }
+
+    }
+
+    panels.forEach((panel)=> {
+      panel.addEventListener('click', toggleOpen)
+    });
+    panels.forEach((panel)=> {
+      panel.addEventListener('transitionend', toggleActive)
+    });
 
   </script>
 
