--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -16,6 +16,42 @@
   </form>
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+const cities =[];
+
+fetch(endpoint).then((blob)=>{
+  return blob.json();
+})
+.then((data)=>{
+  cities.push(...data);
+})
+
+
+const search = document.querySelector('.search');
+const suggestions = document.querySelector('.suggestions');
+
+function filterCities(wordToMatch){
+  let regex = new RegExp(wordToMatch, 'gi');
+  return cities.filter((place)=>{
+    return place.city.match(regex) || place.state.match(regex);
+  })
+
+};
+
+function displayCities(){
+
+  let matchCities = filterCities(this.value);
+  console.log(matchCities);
+  let html = matchCities.map((place)=>{
+    return `<li><span>${place.city}</span> <span>${place.state}</span></li>`
+
+  }).join('');
+
+  suggestions.innerHTML = html;
+};
+
+search.addEventListener('change', displayCities);
+search.addEventListener('keyup', displayCities);
+
 
 </script>
   </body>
