--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,8 +26,15 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    var today = new Date()
+    var year = today.getFullYear();
+    console.log(people.some((person)=>{
+      return year - person.year >= 19;
+    }))
     // Array.prototype.every() // is everyone 19 or older?
-
+    console.log(people.every((person)=>{
+      return year - person.year >= 19;
+    }))
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
