--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -43,9 +43,19 @@
     }))
 
     // Array.prototype.findIndex()
+    console.log(comments.findIndex((comment)=>{
+      return comment.id = 823423;
+    }))
     // Find the comment with this ID
-    // delete the comment with the ID of 823423
 
+    // delete the comment with the ID of 823423
+   var index = comments.findIndex((comment)=>{
+      return comment.id = 823423;
+    })
+
+   comments.splice(index, 1)
+
+   console.log(comments);
   </script>
 </body>
 </html>
