Complete basic hold shift to click multiple implementation.

--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -104,6 +104,55 @@
   </div>
 
 <script>
+var isShifted = false;
+[position1, position2] = [undefined,undefined];
+
+const checkBoxes = document.querySelectorAll('.item');
+
+function holdshift(e){
+  if(e.keyCode === 16){
+    isShifted = !isShifted;
+  }
+}
+
+function getIndex(index){
+  if(!isShifted){
+    return;
+  }
+  if(isShifted){
+    if(position1 === undefined){
+      position1 = index;
+    }
+    else if(position2 === undefined) {
+      position2 = index;
+      var lower = Math.min(position1, position2);
+      var upper = Math.max(position1, position2);
+
+
+      checkBoxes.forEach((input, index)=>{
+        if(index >= lower && index <= upper ){
+          input.childNodes[1].checked = true;
+        }
+      })
+
+      position1 = undefined;
+      position2 = undefined;
+      return;
+    }
+  }
+}
+
+window.addEventListener('keydown', holdshift)
+window.addEventListener('keyup', holdshift);
+
+checkBoxes.forEach((input, index)=>{
+  input.childNodes[1].addEventListener('click', (e)=>
+    getIndex(index)
+    );
+})
+
+
+
 </script>
 </body>
 </html>
